<resources>
    <string name="app_name">Diet Diary</string>
    <string name="content_description_icon">Icon</string>
    <string name="provider_permission_read_label" translatable="false">Read shared contents of diet diary app.</string>
    <string name="provider_permission_read_description" translatable="false">Allows application to read the shared content created by the user.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_save">Save</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="action_calendar_today">Today</string>
    <string name="action_done">Done</string>
    <string name="action_cancel">Cancel</string>
    <string name="activity_settings_title">Settings</string>
    <string name="activity_export_title">Export</string>
    <string name="activity_create_event_title">New Event</string>
    <string name="activity_edit_event_title">Edit Event</string>
    <string name="activity_create_edit_description_hint">Description</string>
    <string name="activity_backup_restore_title">Backup/Restore</string>
    <string name="day_fragment_nothing_to_share">There is no history to share.</string>
    <string name="nav_home">Home</string>
    <string name="nav_backup_restore">Backup/Restore</string>
    <string name="nav_export">Export</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_donate">Donate</string>
    <string name="nav_about">About</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="backup_from">From</string>
    <string name="backup_to">To</string>
    <string name="backup_type">Type</string>
    <string name="backup_progress_title">Exporting&#8230;</string>
    <string name="backup_sd_card_unavailable">SD Card unavailable.</string>
    <string name="backup_temp_file_creation_error">Cannot create temporary file.</string>
    <string name="backup_file_creation_error">Cannot create export file.</string>
    <string name="backup_unimplemented_destination">Selected destination is not supported, yet.</string>
    <string name="backup_io_exception">I/O error occurred during export.</string>
    <string name="backup_sql_exception">DB error during export.</string>
    <string name="backup_exception">Unidentified error during export.</string>
    <string name="backup_external_successful">%1$s created</string>
    <string name="backup_share_successful">File shared</string>
    <string name="backup_no_permission">Please give permission to write files.</string>
    <string name="restore_progress_title">Importing&#8230;</string>
    <string name="restore_file_selector">Files</string>
    <string name="restore_note"><b>Note:</b> Locate your backup files in <i>/sdcard/</i>\nor <i>/sdcard/DietDiaryApp/</i></string>
    <string name="restore_no_permission">Please grant reading access.</string>
    <string name="restore_no_external_storage">Please plug in your external storage.</string>
    <string name="restore_io_exception">I/O error during import.</string>
    <string name="restore_sql_exception">DB error during import.</string>
    <string name="restore_exception">Unknown error during import.</string>
    <string name="restore_already_existing_records">File includes already existing history.</string>
    <string name="restore_file_not_exists">Selected file does not exist.</string>
    <string name="restore_file_not_readable">Selected file is not readable.</string>
    <string name="restore_file_empty">Selected file is empty.</string>
    <string name="restore_csv_corrupted">CSV corrupted.</string>
    <string name="restore_file_not_csv">Selected file is not a CSV file.</string>
    <string name="restore_json_corrupted">JSON corrupted.</string>
    <string name="restore_file_not_json">Selected file is not a JSON file!</string>
    <string name="restore_successful">File %1$s restored.</string>
    <string name="restore_spinner_hint">Select file to restore</string>
    <string name="snack_bar_dismiss">Dismiss</string>
    <string name="snack_bar_undo">Undo</string>
    <string name="snack_bar_deleted">Deleted</string>
    <string name="export_ongoing_progress">Exporting… Please Wait.</string>
    <string name="export_to_email_chooser">Choose your email client.</string>
    <string name="cannot_create_file_path">Cannot create file path. Probably a permission issue.</string>
    <string name="daily_notification_title">Daily Diet Diary Reminder</string>
    <string name="daily_notification_message">Describe your nutrition of the day.</string>
    <string name="spinner_event_types_food">Food</string>
    <string name="spinner_event_types_drink">Drink</string>
    <string name="spinner_event_types_medication">Medication</string>
    <string name="spinner_event_types_supplements">Supplements</string>
    <string name="spinner_event_types_exercise">Exercise</string>
    <string name="spinner_event_types_other">Other</string>
    <string name="spinner_event_food_types_breakfast">Breakfast</string>
    <string name="spinner_event_food_types_lunch">Lunch</string>
    <string name="spinner_event_food_types_dinner">Dinner</string>
    <string name="spinner_event_food_types_snack">Snack</string>
    <string name="spinner_event_food_types_junk">Junk</string>
    <string name="spinner_event_drink_types_coffee">Coffee</string>
    <string name="spinner_event_drink_types_tea">Tea</string>
    <string name="spinner_event_drink_types_alcohol">Alcohol</string>
    <string name="spinner_event_drink_types_water">Water</string>
    <string name="spinner_event_drink_types_energy_drink">Energy Drink</string>
    <string name="spinner_event_drink_types_fruit_juice">Fruit Juice</string>
    <string name="spinner_event_drink_types_milk">Milk</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_clock_mode">Clock Mode</string>
    <string name="pref_list_clock_mode_messages_default">System Default</string>
    <string name="pref_list_clock_mode_messages_24h">24 Hour</string>
    <string name="pref_list_clock_mode_messages_ampm">AM/PM</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_notifications_active">Active</string>
    <string name="pref_title_daily_remainder">Daily reminder</string>
    <string name="pref_title_daily_remainder_time">Remind me at</string>
    <string name="pref_title_daily_remainder_summary">Remind me daily if I don\'t add any entries.</string>
    <string name="pref_header_backup">Cloud Backup</string>
    <string name="pref_title_backup_active">Active</string>
    <string name="pref_backup_no_permission">Please grant permission to you Google account for Google Drive API.</string>
    <string name="pref_title_backup_active_connected">Connected to Google Drive</string>
    <string name="pref_title_backup_active_not_connected">Not connected to Google Drive</string>
    <string name="pref_title_backup_active_failed">Could not connect to Google Drive</string>
    <string name="pref_title_backup_active_connecting">Drive connecting&#8230;</string>
    <string name="pref_title_backup_wifi_only">Only transfer files on Wi-Fi</string>
    <string name="pref_title_backup_wifi_only_summary">File transfers will pause when no Wi-Fi connection is available.</string>
    <string name="pref_title_backup_now">Backup Now.</string>
    <string name="pref_title_backup_now_summary">Last backup: %1$s</string>
    <string name="pref_title_backup_now_summary_never">Never</string>
    <string name="pref_title_backup_frequency">Frequency</string>
    <string name="pref_list_backup_frequency_none">Only when I tap "Backup Now"</string>
    <string name="pref_list_backup_frequency_daily">Daily</string>
    <string name="pref_list_backup_frequency_weekly">Weekly</string>
    <string name="pref_list_backup_frequency_monthly">Monthly</string>
    <string name="pref_backup_unable_to_list_drive_backups">Couldn\'t load Google Drive backups.</string>
    <string name="pref_backup_restore_title">Select a backup to restore:</string>
    <string name="pref_backup_restore_not">Do not restore</string>
    <string name="rate_dialog_title">Rate this app</string>
    <string name="rate_dialog_text">If you enjoy using this app, rate it. Thank you for your support!</string>
    <string name="rate_dialog_yes">Rate Now</string>
    <string name="rate_dialog_later">Remind Me Later</string>
    <string name="rate_dialog_never">No, Thanks</string>
    <string name="drive_dialog_title">Connect Google Drive</string>
    <string name="drive_dialog_text">Would you like to backup your data to your Google Drive account?</string>
    <string name="drive_dialog_yes">Yes, Do It Now</string>
    <string name="drive_dialog_later">Remind Me Later</string>
    <string name="drive_dialog_never">No, Thanks</string>
    <string name="translate_dialog_title">Translate Diet Diary</string>
    <string name="translate_dialog_text">Would you like to help us translate diet diary into your language?</string>
    <string name="translate_dialog_yes">Yes, I Do</string>
    <string name="translate_dialog_later">Remind Me Later</string>
    <string name="translate_dialog_never">No, Thanks</string>
</resources>