<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item android:id="@+id/nav_home"
              android:checked="true"
              android:icon="@drawable/nav_home"
              android:title="@string/nav_home"
              android:visible="false"
            />
        <item android:id="@+id/nav_backup_restore"
              android:icon="@drawable/nav_backup_restore"
              android:title="@string/nav_backup_restore"
            />
        <item android:id="@+id/nav_settings"
              android:icon="@drawable/nav_settings"
              android:title="@string/nav_settings"
            />
        <item android:id="@+id/nav_about"
              android:icon="@drawable/nav_about"
              android:title="@string/nav_about"
            />
    </group>

</menu>
