<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item android:id="@+id/action_save"
          android:icon="@drawable/action_save"
          android:orderInCategory="100"
          android:title="@string/action_save"
          app:showAsAction="ifRoom"
        />

    <item android:id="@+id/action_copy"
          android:icon="@drawable/action_copy"
          android:orderInCategory="100"
          android:title="@string/action_copy"
          android:visible="false"
          app:showAsAction="never"
        />

    <item android:id="@+id/action_delete"
          android:icon="@drawable/action_delete"
          android:orderInCategory="101"
          android:title="@string/action_delete"
          android:visible="false"
          app:showAsAction="never"
        />
</menu>